testResourcesDependencies was unused
and use toList instead of Collectors.toList()